[package]
name = "ptimer"
version = "1.1.1"
authors = ["Mateo Carreras <mateo.carreras@gmail.com>"]
description = "A command line interface for creating timers."
readme = "README.md"
repository = "https://github.com/PokeyOne/ptimer"
license-file = "COPYING"
keywords = ["time", "timer", "util", "utility", "pokey"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
